# anthropomorphic

Anthropomorphic-Arm-main/src/: ur5_globals.hpp
ros2_ur5_interface/: CMakeLists.txt  README.md  setup_workspace.sh
ros2_ur5_interface/docker/: Dockerfile
ros2_ur5_interface/launch/: interface.launch.py  sim.launch.py
ros2_ur5_interface/models/: block.urdf.xacro  desk.urdf.xacro  ur_gz.ros2_control.xacro  ur_gz.urdf.xacro
ros2_ur5_interface/scripts/: ros2.sh
ros2_ur5_interface/src/: gripper_service.cpp  inverse_kin.cpp  publish_trajectory_node.cpp
ros2_ur5_interface/src/include/: inverse_kin.hpp
ros2_ur5_interface/worlds/: empty.world
